# my-x86-os

./: Cargo.toml  README.md
.cargo/: config.toml
src/: acpi.rs  allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  process.rs  scheduler.rs  serial.rs  syscall.rs  trap_frame.rs  vga_buffer.rs
